# solana-agent-kit

./: .coverage  .coverage.BEAST.3398432.XeEAYlpx  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_kit/search_internet/: __init__.py  plugin.py
docs/: DFLOW_PREDICTION_MARKET_SCOPE.md
sakit/: __init__.py  birdeye.py  dflow_prediction.py  image_gen.py  jupiter_earn.py  jupiter_holdings.py  jupiter_recurring.py  jupiter_shield.py  jupiter_token_search.py  jupiter_trigger.py  mcp.py  nemo_agent.py  privy_balance.py  privy_create_user.py  privy_create_wallet.py  privy_dflow.py  privy_dflow_prediction.py  privy_dflow_swap.py  privy_earn.py  privy_get_user_by_telegram.py  privy_jupiter_earn.py  privy_privacy_cash.py  privy_privy_cash.py  privy_recurring.py  privy_swap.py  privy_transfer.py  privy_trigger.py  privy_ultra.py  privy_ultra_quote.py  privy_wallet_address.py  rugcheck.py  search_internet.py  sns_lookup.py  solana.py  solana_balance.py  solana_dflow_swap.py  solana_price.py  solana_swap.py  solana_transfer.py  solana_ultra.py  (+5 more)
sakit/utils/: dflow.py  earn.py  recurring.py  swap.py  transfer.py  trigger.py  ultra.py  wallet.py
src/tools/: trade.ts
tests/: __init__.py  test_birdeye_tool.py  test_dflow_prediction_tool.py  test_dflow_utils.py  test_image_gen_tool.py  test_jupiter_earn_tool.py  test_jupiter_holdings_tool.py  test_jupiter_recurring_tool.py  test_jupiter_shield_tool.py  test_jupiter_token_search_tool.py  test_jupiter_trigger_tool.py  test_mcp_tool.py  test_openai_strict_compliance.py  test_privy_create_user_tool.py  test_privy_create_wallet_tool.py  test_privy_dflow_prediction_tool.py  test_privy_dflow_swap_tool.py  test_privy_dflow_tool.py  test_privy_earn_tool.py  test_privy_get_user_by_telegram_tool.py  test_privy_jupiter_earn_tool.py  test_privy_privy_cash_tool.py  test_privy_recurring_tool.py  test_privy_transfer_tool.py  test_privy_trigger_tool.py  test_privy_ultra_quote_tool.py  test_privy_ultra_tool.py  test_privy_wallet_address_tool.py  test_recurring_utils.py  test_rugcheck_tool.py  test_search_internet_tool.py  test_solana_dflow_swap_tool.py  test_solana_transfer_tool.py  test_solana_ultra_quote_tool.py  test_solana_ultra_tool.py  test_starpay_cards_tool.py  test_technical_analysis_tool.py  test_token_math_tool.py  test_transfer_utils.py  test_trigger_utils.py  (+3 more)
